package gov.cdc.izgateway.security;

import lombok.Data;

import java.util.List;

@Data
public class JWTPrincipal extends Principal {
}
